Update  AI loodud leht

--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@
                     <div class="instructor-info">
                         <h3>Heino Talvik</h3>
                         <p>E-post: heino.talvik@gmail.com</p>
+                        <p>Heino Talvik on kogenud õppejõud, kes on spetsialiseerunud äriinfosüsteemidele. Laialdaste teadmistega arvutiprogrammide suhtluse ja integratsiooni valdkonnas pakub ta praktilisi teadmisi selle kohta, kuidas neid tehnoloogiaid rakendatakse ärikontekstis, eriti logistikas.</p>
                     </div>
                 </div>
             </div>
