--- a/resources.html
+++ b/resources.html
@@ -51,8 +51,8 @@
                 <p>Täielik komplekt loengu slaide on saadaval allalaadimiseks:</p>
                 <div class="resource-item">
                     <i class="fas fa-file-powerpoint"></i>
-                    <a href="#" class="resource-link">Äriinfosüsteemid - Täielik slaidikomplekt</a>
-                    <p class="resource-description">Täielik PowerPointi esitlus, mis sisaldab kõiki 163 slaidi kursusest.</p>
+                    <a href="images/1_sissejuhatus.pptx" class="resource-link">Äriinfosüsteemid - Täielik slaidikomplekt</a>
+                    <p class="resource-description">Täielik PowerPointi esitlus, mis sisaldab kõiki 161 slaidi kursusest.</p>
                 </div>
                 
                 <h3>Teemapõhised materjalid</h3>
